Try using other CI image for gcovr

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,6 @@
 run tests:
   stage: test
+  image: jenswet/gcc-cmake-gcovr
   script:
     - make test
     - gcovr --xml-pretty --exclude-unreachable-branches --print-summary -o coverage.xml --root ${CI_PROJECT_DIR}
